--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/x-icon" href="./src/assets/img/icon-boolbnb.svg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- CSS Tomtom Map -->
     <link rel="stylesheet" type="text/css"
